CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
PROJECT(sdl2test)

ADD_DEFINITIONS(
  #  -std=c99
    -lGL
   # -lGLU
    -lGLEW
  #  -lglfw
)
 
ADD_EXECUTABLE(sdl2test sdl2example.cpp)
 
INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
FIND_PACKAGE(GLEW REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${GLEW_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(sdl2test ${SDL2_LIBRARIES} ${GLEW_LIBRARIES})
SET(CMAKE_CXX_FLAGS_DEBUG  "-O0 -g")
